<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/data"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>